src/main/java/com/han/towersofivory/agent/businesslayer/listeners/AgentGrammarParser.java
// Generated from /home/plusplus/Projects/asd-project-s2-2024-klas-b/src/main/java/com/han/towersofivory/agent/businesslayer/AgentGrammar.g4 by ANTLR 4.13.1
package com.han.towersofivory.agent.businesslayer.listeners;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class AgentGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT=1, WS=2, WANNEER=3, DAN=4, IK=5, DE=6, BEVAT=7, NAAR=8, EN=9, ZIJN=10, 
		KAMER=11, GANG=12, MIJN=13, MET=14, VAN=15, IN=16, BEN=17, EEN=18, OF=19, 
		IS=20, MINDERDAN=21, MEERDAN=22, NIETGELIJKAAN=23, GELIJKAAN=24, PUNT=25, 
		COMMA=26, SPATIE=27, LEVENSPUNTEN=28, MAXIMALELEVENS=29, AANVALSKRACHT=30, 
		VERDEDIGINGSKRACHT=31, DEUR=32, TRAP=33, SPELER=34, BOVEN=35, BENEDEN=36, 
		LINKS=37, RECHTS=38, TERUG=39, WEG=40, DOOR=41, LOOP=42, SLA=43, INTERACTEER=44, 
		DICHTSTBIJZIJNDE=45, VERSTE=46;
	public static final int
		RULE_agent = 0, RULE_regel = 1, RULE_expressie = 2, RULE_omgevingssituatie = 3, 
		RULE_spelerssituatie = 4, RULE_voegWoorden = 5, RULE_kamerObservatie = 6, 
		RULE_gangObservatie = 7, RULE_actie = 8, RULE_loopActie = 9, RULE_aanvalsActie = 10, 
		RULE_interacteerActie = 11, RULE_operatie = 12, RULE_spelerAttribuut = 13, 
		RULE_loopRichting = 14, RULE_nabijheidsLocatie = 15, RULE_nabijheid = 16, 
		RULE_integer = 17, RULE_omgevingsAttribuut = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"agent", "regel", "expressie", "omgevingssituatie", "spelerssituatie", 
			"voegWoorden", "kamerObservatie", "gangObservatie", "actie", "loopActie", 
			"aanvalsActie", "interacteerActie", "operatie", "spelerAttribuut", "loopRichting", 
			"nabijheidsLocatie", "nabijheid", "integer", "omgevingsAttribuut"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'Wanneer '", "'dan '", null, "'de '", "' bevat'", 
			"'naar '", "'en '", "'zijn'", "'kamer'", "'gang '", "'mijn '", "'met '", 
			"'van '", "'in '", "'ben'", "'een'", "'of '", "'is'", "'minder dan '", 
			"'meer dan '", null, null, "'.'", "', '", "' '", "'levenspunten'", "'maximale levenspunten'", 
			"'aanvalskracht'", "'verdedigingskracht'", null, null, null, "'boven'", 
			"'beneden'", "'links'", "'rechts'", "'terug'", "'weg '", "'door'", "'loop '", 
			"'sla '", "'interacteer '", "'dichtstbijzijnde '", "'verste '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INT", "WS", "WANNEER", "DAN", "IK", "DE", "BEVAT", "NAAR", "EN", 
			"ZIJN", "KAMER", "GANG", "MIJN", "MET", "VAN", "IN", "BEN", "EEN", "OF", 
			"IS", "MINDERDAN", "MEERDAN", "NIETGELIJKAAN", "GELIJKAAN", "PUNT", "COMMA", 
			"SPATIE", "LEVENSPUNTEN", "MAXIMALELEVENS", "AANVALSKRACHT", "VERDEDIGINGSKRACHT", 
			"DEUR", "TRAP", "SPELER", "BOVEN", "BENEDEN", "LINKS", "RECHTS", "TERUG", 
			"WEG", "DOOR", "LOOP", "SLA", "INTERACTEER", "DICHTSTBIJZIJNDE", "VERSTE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AgentGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AgentGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AgentContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AgentGrammarParser.EOF, 0); }
		public List<RegelContext> regel() {
			return getRuleContexts(RegelContext.class);
		}
		public RegelContext regel(int i) {
			return getRuleContext(RegelContext.class,i);
		}
		public AgentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).enterAgent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).exitAgent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentGrammarVisitor ) return ((AgentGrammarVisitor<? extends T>)visitor).visitAgent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AgentContext agent() throws RecognitionException {
		AgentContext _localctx = new AgentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_agent);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(38);
				regel();
				}
				}
				setState(41); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WANNEER );
			setState(43);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RegelContext extends ParserRuleContext {
		public TerminalNode WANNEER() { return getToken(AgentGrammarParser.WANNEER, 0); }
		public ExpressieContext expressie() {
			return getRuleContext(ExpressieContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(AgentGrammarParser.COMMA, 0); }
		public ActieContext actie() {
			return getRuleContext(ActieContext.class,0);
		}
		public TerminalNode PUNT() { return getToken(AgentGrammarParser.PUNT, 0); }
		public RegelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).enterRegel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).exitRegel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentGrammarVisitor ) return ((AgentGrammarVisitor<? extends T>)visitor).visitRegel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegelContext regel() throws RecognitionException {
		RegelContext _localctx = new RegelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_regel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(WANNEER);
			setState(46);
			expressie();
			setState(47);
			match(COMMA);
			setState(48);
			actie();
			setState(49);
			match(PUNT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressieContext extends ParserRuleContext {
		public List<SpelerssituatieContext> spelerssituatie() {
			return getRuleContexts(SpelerssituatieContext.class);
		}
		public SpelerssituatieContext spelerssituatie(int i) {
			return getRuleContext(SpelerssituatieContext.class,i);
		}
		public List<OmgevingssituatieContext> omgevingssituatie() {
			return getRuleContexts(OmgevingssituatieContext.class);
		}
		public OmgevingssituatieContext omgevingssituatie(int i) {
			return getRuleContext(OmgevingssituatieContext.class,i);
		}
		public List<VoegWoordenContext> voegWoorden() {
			return getRuleContexts(VoegWoordenContext.class);
		}
		public VoegWoordenContext voegWoorden(int i) {
			return getRuleContext(VoegWoordenContext.class,i);
		}
		public ExpressieContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressie; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).enterExpressie(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).exitExpressie(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentGrammarVisitor ) return ((AgentGrammarVisitor<? extends T>)visitor).visitExpressie(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressieContext expressie() throws RecognitionException {
		ExpressieContext _localctx = new ExpressieContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expressie);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MIJN:
				{
				setState(51);
				spelerssituatie();
				}
				break;
			case IK:
			case DE:
				{
				setState(52);
				omgevingssituatie();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EN || _la==OF) {
				{
				{
				setState(55);
				voegWoorden();
				setState(58);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case MIJN:
					{
					setState(56);
					spelerssituatie();
					}
					break;
				case IK:
				case DE:
					{
					setState(57);
					omgevingssituatie();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OmgevingssituatieContext extends ParserRuleContext {
		public KamerObservatieContext kamerObservatie() {
			return getRuleContext(KamerObservatieContext.class,0);
		}
		public GangObservatieContext gangObservatie() {
			return getRuleContext(GangObservatieContext.class,0);
		}
		public OmgevingssituatieContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_omgevingssituatie; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).enterOmgevingssituatie(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).exitOmgevingssituatie(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentGrammarVisitor ) return ((AgentGrammarVisitor<? extends T>)visitor).visitOmgevingssituatie(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OmgevingssituatieContext omgevingssituatie() throws RecognitionException {
		OmgevingssituatieContext _localctx = new OmgevingssituatieContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_omgevingssituatie);
		try {
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				kamerObservatie();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				gangObservatie();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpelerssituatieContext extends ParserRuleContext {
		public TerminalNode MIJN() { return getToken(AgentGrammarParser.MIJN, 0); }
		public SpelerAttribuutContext spelerAttribuut() {
			return getRuleContext(SpelerAttribuutContext.class,0);
		}
		public OperatieContext operatie() {
			return getRuleContext(OperatieContext.class,0);
		}
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public TerminalNode IS() { return getToken(AgentGrammarParser.IS, 0); }
		public TerminalNode ZIJN() { return getToken(AgentGrammarParser.ZIJN, 0); }
		public SpelerssituatieContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spelerssituatie; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).enterSpelerssituatie(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).exitSpelerssituatie(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentGrammarVisitor ) return ((AgentGrammarVisitor<? extends T>)visitor).visitSpelerssituatie(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpelerssituatieContext spelerssituatie() throws RecognitionException {
		SpelerssituatieContext _localctx = new SpelerssituatieContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_spelerssituatie);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(MIJN);
			setState(70);
			spelerAttribuut();
			setState(71);
			operatie();
			setState(72);
			integer();
			setState(73);
			_la = _input.LA(1);
			if ( !(_la==ZIJN || _la==IS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VoegWoordenContext extends ParserRuleContext {
		public VoegWoordenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_voegWoorden; }
	 
		public VoegWoordenContext() { }
		public void copyFrom(VoegWoordenContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EnOperatieContext extends VoegWoordenContext {
		public TerminalNode EN() { return getToken(AgentGrammarParser.EN, 0); }
		public EnOperatieContext(VoegWoordenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).enterEnOperatie(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).exitEnOperatie(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentGrammarVisitor ) return ((AgentGrammarVisitor<? extends T>)visitor).visitEnOperatie(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OfOperatieContext extends VoegWoordenContext {
		public TerminalNode OF() { return getToken(AgentGrammarParser.OF, 0); }
		public OfOperatieContext(VoegWoordenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).enterOfOperatie(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).exitOfOperatie(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentGrammarVisitor ) return ((AgentGrammarVisitor<? extends T>)visitor).visitOfOperatie(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VoegWoordenContext voegWoorden() throws RecognitionException {
		VoegWoordenContext _localctx = new VoegWoordenContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_voegWoorden);
		try {
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EN:
				_localctx = new EnOperatieContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				match(EN);
				}
				break;
			case OF:
				_localctx = new OfOperatieContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				match(OF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class KamerObservatieContext extends ParserRuleContext {
		public TerminalNode DE() { return getToken(AgentGrammarParser.DE, 0); }
		public TerminalNode KAMER() { return getToken(AgentGrammarParser.KAMER, 0); }
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public OmgevingsAttribuutContext omgevingsAttribuut() {
			return getRuleContext(OmgevingsAttribuutContext.class,0);
		}
		public TerminalNode BEVAT() { return getToken(AgentGrammarParser.BEVAT, 0); }
		public OperatieContext operatie() {
			return getRuleContext(OperatieContext.class,0);
		}
		public KamerObservatieContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kamerObservatie; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).enterKamerObservatie(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).exitKamerObservatie(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentGrammarVisitor ) return ((AgentGrammarVisitor<? extends T>)visitor).visitKamerObservatie(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KamerObservatieContext kamerObservatie() throws RecognitionException {
		KamerObservatieContext _localctx = new KamerObservatieContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_kamerObservatie);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(DE);
			setState(80);
			match(KAMER);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 31457280L) != 0)) {
				{
				setState(81);
				operatie();
				}
			}

			setState(84);
			integer();
			setState(85);
			omgevingsAttribuut();
			setState(86);
			match(BEVAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GangObservatieContext extends ParserRuleContext {
		public TerminalNode DE() { return getToken(AgentGrammarParser.DE, 0); }
		public TerminalNode GANG() { return getToken(AgentGrammarParser.GANG, 0); }
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public OmgevingsAttribuutContext omgevingsAttribuut() {
			return getRuleContext(OmgevingsAttribuutContext.class,0);
		}
		public TerminalNode BEVAT() { return getToken(AgentGrammarParser.BEVAT, 0); }
		public OperatieContext operatie() {
			return getRuleContext(OperatieContext.class,0);
		}
		public TerminalNode IK() { return getToken(AgentGrammarParser.IK, 0); }
		public TerminalNode IN() { return getToken(AgentGrammarParser.IN, 0); }
		public TerminalNode EEN() { return getToken(AgentGrammarParser.EEN, 0); }
		public TerminalNode BEN() { return getToken(AgentGrammarParser.BEN, 0); }
		public GangObservatieContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gangObservatie; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).enterGangObservatie(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).exitGangObservatie(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentGrammarVisitor ) return ((AgentGrammarVisitor<? extends T>)visitor).visitGangObservatie(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GangObservatieContext gangObservatie() throws RecognitionException {
		GangObservatieContext _localctx = new GangObservatieContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_gangObservatie);
		int _la;
		try {
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DE:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				match(DE);
				setState(89);
				match(GANG);
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 31457280L) != 0)) {
					{
					setState(90);
					operatie();
					}
				}

				setState(93);
				integer();
				setState(94);
				omgevingsAttribuut();
				setState(95);
				match(BEVAT);
				}
				break;
			case IK:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				match(IK);
				setState(98);
				match(IN);
				setState(99);
				match(EEN);
				setState(100);
				match(GANG);
				setState(101);
				match(BEN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ActieContext extends ParserRuleContext {
		public TerminalNode DAN() { return getToken(AgentGrammarParser.DAN, 0); }
		public LoopActieContext loopActie() {
			return getRuleContext(LoopActieContext.class,0);
		}
		public AanvalsActieContext aanvalsActie() {
			return getRuleContext(AanvalsActieContext.class,0);
		}
		public InteracteerActieContext interacteerActie() {
			return getRuleContext(InteracteerActieContext.class,0);
		}
		public ActieContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actie; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).enterActie(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgentGrammarListener ) ((AgentGrammarListener)listener).exitActie(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentGrammarVisitor ) return ((AgentGrammarVisitor<? extends T>)visitor).visitActie(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActieContext actie() throws RecognitionException {
		ActieContext _localctx = new ActieContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_actie);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(DAN);
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LOOP:
				{
				setState(105);
				loopActie();
				}
				break;
			case SLA:
				{
				setState(106);
				aanvalsActie();
				}
				break;
			case INTERACTEER:
				{
				setState(107);
				interacteerActie();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
